--- a/src/app/event-bind/event-bind.component.html
+++ b/src/app/event-bind/event-bind.component.html
@@ -10,7 +10,9 @@
       <button (click)="onPrimaryClick()" class="btn btn-primary">
         Click me
       </button>
+    </div>
 
+    <div class="col">
       <button (click)="resetCounter()" class="ms-2 btn btn-danger">
         Reset counter
       </button>
@@ -18,9 +20,18 @@
   </div>
 
   <div class="row mt-2 p-2">
-    <div class="col">{{ userInput }} {{ tralala.value }}</div>
+    <div class="col">{{ userInput }}</div>
     <div class="col">
-      <input #tralala (input)="onUserInput($event)" class="form-control" />
+      <input
+        (input)="onUserInput($event)"
+        [value]="userInput"
+        class="form-control"
+      />
+    </div>
+    <div class="col">
+      <button (click)="resetUserInput()" class="btn btn-danger">
+        Reset input
+      </button>
     </div>
   </div>
 </div>
