--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="w-75 m-4 border border-2 border-primary">
+<div class="m-4 border border-2 border-primary">
   <div class="bg-info text-center">app.component</div>
   <div class="p-2 d-flex flex-column gap-2">
     <h1>Welcome to Angular!</h1>
